tools/k8s/server-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
        version: latest
    spec:
      containers:
        - name: server
          image: "registry.cn-chengdu.aliyuncs.com/work-daocker/daocker-server:v1.0"
          imagePullPolicy: IfNotPresent
