tools/k8s/ui-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ui
spec:
  selector:
    matchLabels:
      app:  ui
  replicas: 1
  template:
    metadata:
      labels:
        # service 会根据此标签来查找此pod
        app:  ui
        version: latest
    spec:
      containers:
        - name: ui
          image: "registry.cn-chengdu.aliyuncs.com/work-daocker/daocker-ui:1.0"
          imagePullPolicy: IfNotPresent
