tools/k8s/server-svc.yaml
apiVersion: v1
kind: Service
metadate:
  name: server
spec:
  type: ClusterIP
  ports:
    - name: server-http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: server
