tools/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daocker-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 192.168.56.3
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 8080
        #api开头的 url，转发到后端服务 ，否则都转发到前端服务              
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: server
              port:
                number: 3000
